--- a/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
@@ -1,8 +1,8 @@
-<div id="taskCoreFields" class="swiper-no-swiping" data-snap-ignore="true">
+<div class="swiper-no-swiping" data-snap-ignore="true">
 
   <div lists-select-options>
     <div ng-if="!addNewListVisible" class="form-group select-list-visible-animation">
-      <label class="sr-only" for="taskList">list</label>
+      <label for="taskList" class="sr-only">list</label>
       <select id="taskList" class="simple-input swiper-no-swiping" ng-model="task.relationships.list" ng-options="list.uuid as list.title for list in listsSelectOptions" options-disabled="list.delimiter for list in listsSelectOptions" editable-field>
         <option value="">select list...</option>
       </select>
@@ -19,7 +19,7 @@
   </div>
 
   <div ng-show="contexts.length" class="form-group">
-    <label class="sr-only" for="taskContext">context</label>
+    <label for="taskContext" class="sr-only">context</label>
     <select id="taskContext" class="simple-input swiper-no-swiping" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts" editable-field>
       <option value="">select context...</option>
     </select>
