Bind HTML label for attributes to correct form elements.

--- a/frontend/core/src/main/webapp/static/app/auth/changePassword.html
+++ b/frontend/core/src/main/webapp/static/app/auth/changePassword.html
@@ -7,21 +7,21 @@
       <div class="simple-content-container">
         <form role="form" name="change_passwordForm" novalidate>
 
-          <div id="currentPassword" class="form-group">
+          <div class="form-group">
             <label for="currentPassword" class="sr-only">old password</label>
-            <input type="password" name="currentPassword" class="simple-input" ng-model="user.currentPassword" placeholder="enter old password..." ng-minlength="7" ng-blur="currentPasswordAttempted=true" required />
+            <input type="password" name="currentPassword" id="currentPassword" class="simple-input" ng-model="user.currentPassword" placeholder="enter old password..." ng-minlength="7" ng-blur="currentPasswordAttempted=true" required />
             <p ng-show="change_passwordForm.currentPassword.$invalid && !change_passwordForm.currentPassword.$pristine && currentPasswordAttempted" class="validation-error">password must be 7 characters or more</p>
           </div>
 
-          <div id="newPassword" class="form-group">
+          <div class="form-group">
             <label for="newPassword" class="sr-only">new password</label>
-            <input type="password" name="newPassword" class="simple-input" ng-model="user.newPassword" placeholder="enter new password..." ng-blur="newPasswordAttempted=true" required ng-minlength="7" />
+            <input type="password" name="newPassword" id="newPassword" class="simple-input" ng-model="user.newPassword" placeholder="enter new password..." ng-blur="newPasswordAttempted=true" required ng-minlength="7" />
             <p ng-show="change_passwordForm.newPassword.$invalid && !change_passwordForm.newPassword.$pristine && newPasswordAttempted" class="validation-error">password must be 7 characters or more</p>
           </div>
 
-          <div id="newPasswordReEnter" class="form-group">
+          <div class="form-group">
             <label for="newPasswordReEnter" class="sr-only">new password again</label>
-            <input type="password" name="newPasswordReEnter" class="simple-input" ng-model="user.reEnteredNewPassword" ng-blur="reEnterNewPasswordAttempted=true" placeholder="re-enter new password..." password-match="user.newPassword" ng-minlength="7" required />
+            <input type="password" name="newPasswordReEnter" id="newPasswordReEnter" class="simple-input" ng-model="user.reEnteredNewPassword" ng-blur="reEnterNewPasswordAttempted=true" placeholder="re-enter new password..." password-match="user.newPassword" ng-minlength="7" required />
             <p ng-show="change_passwordForm.newPasswordReEnter.$invalid && !change_passwordForm.newPasswordReEnter.$pristine && reEnterNewPasswordAttempted" class="validation-error">passwords don't match</p>
           </div>
 
