--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -6,9 +6,9 @@
       </div>
       <div class="content">
         <form role="form" name="loginForm" novalidate>
-          <div id="email" class="form-group">
+          <div class="form-group">
             <label for="email" class="sr-only">email</label>
-            <input type="email" name="email" class="simple-input" ng-model="user.username" ng-readonly="isUserEmailEditable" ng-blur="emailAttempted=true" placeholder="enter email..." required />
+            <input type="email" name="email" id="email" class="simple-input" ng-model="user.username" ng-readonly="isUserEmailEditable" ng-blur="emailAttempted=true" placeholder="enter email..." required />
             <p ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && emailAttempted" class="validation-error">not a valid email address</p>
           </div>
           <div class="form-group">
@@ -18,7 +18,7 @@
           </div>
           <div ng-hide="rememberByDefault()" class="form-group">
             <input type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
-            <label class="default-element" for="remember">remember</label>
+            <label for="remember" class="default-element">remember</label>
           </div>
           <div class="form-group button-container">
             <button type="submit" class="wide-button normal-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
