--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -14,7 +14,7 @@
               </div>
             </div>
           </div>
-          <form role="form" name="itemToInbox" class="add-element" ng-init="newItem = {}" ng-submit="callAndRefresh(addNewItem, newItem)" add-item data-snap-ignore="{{ignoreSnap}}" autocapitalize="none" autocorrect="off">
+          <form role="form" class="add-element" ng-init="newItem = {}" ng-submit="callAndRefresh(addNewItem, newItem)" add-item data-snap-ignore="{{ignoreSnap}}" autocapitalize="none" autocorrect="off">
             <div class="form-group" editable-field-container="disable">
               <label for="itemTitle" class="sr-only">title</label>
               <div>
