--- a/frontend/core/src/main/webapp/static/app/tasks/addTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/addTask.html
@@ -1,4 +1,4 @@
-<form role="form" name="addTaskForm" class="add-element" ng-submit="callAndRefresh(addSubtask, subtask)" add-item data-snap-ignore="{{ignoreSnap}}" autocapitalize="none" autocorrect="off">
+<form role="form" class="add-element" ng-submit="callAndRefresh(addSubtask, subtask)" add-item data-snap-ignore="{{ignoreSnap}}" autocapitalize="none" autocorrect="off">
   <div class="form-group" editable-field-container="disable">
     <label for="taskTitle" class="sr-only">title</label>
     <div>
