--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -17,7 +17,7 @@
             <p ng-show="loginForm.password.$invalid && !loginForm.password.$pristine && passwordAttempted" class="validation-error">password must be 7 characters or more</p>
           </div>
           <div ng-hide="rememberByDefault()" class="form-group">
-            <input type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
+            <input type="checkbox" id="remember" ng-model="user.remember" checked="checked" />
             <label for="remember" class="default-element">remember</label>
           </div>
           <div class="form-group button-container">
