--- a/frontend/core/src/main/webapp/static/app/auth/waiting.html
+++ b/frontend/core/src/main/webapp/static/app/auth/waiting.html
@@ -37,7 +37,7 @@
           <form role="form" id="coupon-form" name="couponForm" submit="useCoupon()">
             <div id="email" class="form-group">
               <label for="input-coupon" class="sr-only">coupon</label>
-              <input type="text" name="coupon" class="simple-input" id="input-coupon" ng-model="user.coupon" placeholder="enter code..." required maxlength="16" autocapitalize="none"/>
+              <input type="text" class="simple-input" id="input-coupon" ng-model="user.coupon" placeholder="enter code..." required maxlength="16" autocapitalize="none"/>
             </div>
             <div class="button-container form-group">
               <button type="submit" id="waiting-button" class="wide-button normal-button" ng-click="useCoupon()" ng-disabled="!couponForm.$valid">
