--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -10,7 +10,7 @@
               </a>
             </li>
             <li>
-              <form role="form" name="addListForm" class="add-element" ng-submit="callAndRefresh(addList, newList)" add-item autocapitalize="none" autocorrect="off">
+              <form role="form" class="add-element" ng-submit="callAndRefresh(addList, newList)" add-item autocapitalize="none" autocorrect="off">
                 <div class="form-group" editable-field-container="disable">
                   <label for="listTitle" class="sr-only">title</label>
                   <input type="text" id="listTitle" class="simple-input" ng-model="newList.title" ng-blur="blurredAddItemElement()" ng-focus="focusedAddItemElement()" editable-field placeholder="add list..."/>
