Added type attribute to buttons in HTML.

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -33,7 +33,7 @@
           </div>
           <footer ng-if="(items.length > 0 && sortingItem === undefined)">
             <nav role="navigation" class="swiper-no-swiping item-actions">
-              <button class="wide-button border-button" ng-click="sortInbox()">
+              <button type="button" class="wide-button border-button" ng-click="sortInbox()">
                 <span ng-bind="getSortingText()"></span>
               </button>
             </nav>
