--- a/frontend/core/src/main/webapp/static/app/auth/modalFooter.html
+++ b/frontend/core/src/main/webapp/static/app/auth/modalFooter.html
@@ -1,4 +1,4 @@
 <div id="modalFooter" class="vertical-buttons">
-  <button ng-if="modalSuccessText" class="wide-button normal-button" ng-click="$modalSuccess()" ng-disabled="modalSuccessDisabled">{{modalSuccessText}}</button>
-  <button ng-if="modalCancelText" class="wide-button normal-button" ng-click="$modalCancel()">{{modalCancelText}}</button>
+  <button ng-if="modalSuccessText" type="button" class="wide-button normal-button" ng-disabled="modalSuccessDisabled" ng-click="$modalSuccess()">{{modalSuccessText}}</button>
+  <button ng-if="modalCancelText" type="button" class="wide-button normal-button" ng-click="$modalCancel()">{{modalCancelText}}</button>
 </div>
