--- a/frontend/core/src/main/webapp/static/app/base/policyModalFooter.html
+++ b/frontend/core/src/main/webapp/static/app/base/policyModalFooter.html
@@ -1,3 +1,3 @@
 <div class="vertical-buttons">
-  <button class="wide-button normal-button" ng-click="closePolicyModal()">close</button>
+  <button type="button" class="wide-button normal-button" ng-click="closePolicyModal()">close</button>
 </div>
