--- a/frontend/core/src/main/webapp/static/app/main/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/main/listNotes.html
@@ -15,7 +15,7 @@
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
-          <button class="add-button" ng-click="addNote(newNote)">add note...</button>
+          <button type="button" class="add-button" ng-click="addNote(newNote)">add note...</button>
         </div>
       </div>
     </div>
