--- a/frontend/core/src/main/webapp/static/app/notes/keyword.html
+++ b/frontend/core/src/main/webapp/static/app/notes/keyword.html
@@ -32,7 +32,7 @@
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
-          <button class="add-button" ng-click="addNote(newNote)">add note...</button>
+          <button type="button" class="add-button" ng-click="addNote(newNote)">add note...</button>
         </div>
         <div ng-if="keyword === undefined" accordion>
           <h3>no keywords</h3>
@@ -47,7 +47,7 @@
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
-          <button class="add-button" ng-click="addNote(newNote)">add note...</button>
+          <button type="button" class="add-button" ng-click="addNote(newNote)">add note...</button>
         </div>
         <div ng-if="keyword === null" accordion>
           <h3>no list</h3>
@@ -62,7 +62,7 @@
             </div>
             <div ng-if="!note.content" class="teaser-empty"></div>
           </div>
-          <button class="add-button" ng-click="addNote(newNote)">add note...</button>
+          <button type="button" class="add-button" ng-click="addNote(newNote)">add note...</button>
         </div>
       </div>
     </div>
