name change: teaser -> excerpt (affects multiple classes

--- a/frontend/core/src/main/webapp/static/app/main/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/main/listNotes.html
@@ -6,14 +6,14 @@
           <h3>notes</h3>
           <div ng-repeat="note in notes | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
             <div accordion-title="note" edit-item="editNote(note)" edit-item-fields="editNoteFields(note)" has-complete="false" toggle-complete>
-              <div ng-if="note.content" class="teaser">
+              <div ng-if="note.content" class="excerpt">
                 <a href ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
               </div>
             </div>
             <div ng-if="isOpen(note)" editable-field-container="auto">
               <div ng-include="'static/app/notes/noteActions.html'"></div>
             </div>
-            <div ng-if="!note.content" class="teaser-empty"></div>
+            <div ng-if="!note.content" class="excerpt-empty"></div>
           </div>
           <button type="button" class="add-button" ng-click="addNote(newNote)">add note...</button>
         </div>
