--- a/frontend/core/src/main/webapp/static/app/notes/recent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/recent.html
@@ -7,14 +7,14 @@
           <button type="button" class="add-button" ng-click="addNote({})">add note...</button>
           <div ng-repeat="note in allNotes | orderBy:'modified':true | limitTo: getRecentNotesLimit()" ng-init="newNote = {}">
             <div accordion-title="note" edit-item="editNote(note)" edit-item-fields="editNoteFields(note)" has-complete="false" toggle-complete>
-              <div ng-if="note.content" class="teaser">
+              <div ng-if="note.content" class="excerpt">
                 <a href ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
               </div>
             </div>
             <div ng-if="isOpen(note)" editable-field-container="auto">
               <div ng-include="'static/app/notes/noteActions.html'"></div>
             </div>
-            <div ng-if="!note.content" class="teaser-empty"></div>
+            <div ng-if="!note.content" class="excerpt-empty"></div>
           </div>
           <div ng-if="notes.length === 0">
             <div class="instruction-text">
