Improved date change detection: * rely on AngularJS $digest loop instead of $timeout service * refactored DateService to be immutable and moved unsuitable code to DatesController * better function naming * DateService unit test

--- a/frontend/core/src/main/webapp/static/app/tasks/datepicker.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/datepicker.html
@@ -4,7 +4,7 @@
       <ul class="horizontally-justified">
 
         <li ng-if="isDesktop" id="datepicker-arrow-previous" class="justified-element">
-          <a href ng-click="previousWeek()">
+          <a href ng-click="changeToPreviousWeek()">
             <span class="icon-arrow-left"></span>
           </a>
         </li>
@@ -59,7 +59,7 @@
         </li>
 
         <li ng-if="isDesktop" id="datepicker-arrow-next" class="justified-element">
-          <a href ng-click="nextWeek()">
+          <a href ng-click="changeToNextWeek()">
             <span class="icon-arrow-right"></span>
           </a>
         </li>
